selfhost/test/parser/map_error_no_value_eof.out
Error at %FILE_NAME%:1:7
Unexpected end of file:
  |  { abc: 
           ^